<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/cuadro_dialog_mis_camas">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/labelConfigCamas"
            android:text="@string/estado" />

        <Spinner
            android:id="@+id/spEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/labelConfigCamas"
            android:text="Planta" />

        <Spinner
            android:id="@+id/spPlanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/labelConfigCamas"
            android:text="@string/id" />

        <EditText
            android:id="@+id/txtIdCama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/segoeui"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/chContagio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/cama_contagiosa"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardarCama"
                style="@style/botones_dialog"
                android:text="@string/guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancelarCama"
                style="@style/botonCancelar"
                android:text="@string/cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>