...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBuscar"
            style="@style/botones_reserva"
            android:layout_marginBottom="32dp"
            android:text="@string/buscar_cama" />

        <Button
            android:id="@+id/btnDerivar"
...
