...

        </LinearLayout>
    </LinearLayout>


    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/graficobarras"
        android:layout_width="346dp"
        android:layout_height="313dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_abajo_reservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
...
